Update 3. Advanced Space Defence.md

--- a/0. Assignments/3. Advanced Space Defence.md
+++ b/0. Assignments/3. Advanced Space Defence.md
@@ -3,6 +3,8 @@ For this assignment we are going to continue with the space defence game, adding
 
 To expand the game we increase the playing area beyond the screen, we add more enemies, another weapon and a new mechanic, where the player can score by shipping goods between 2 planets.
 
+All the sprites you need can be found in the assets folder, but you are also free to use your own!
+
 ### Functionality:
 Implement the following functionality:
 
