--- a/0. Assignments/5. Optimization.md
+++ b/0. Assignments/5. Optimization.md
@@ -1,6 +1,6 @@
 # Optimization
 
-Optimize the code in [8. Optimization](https://github.com/Samonum/GameDevSamples/tree/main/8. Optimization) and/or your own game.
+Optimize the code in [8. Optimization](https://github.com/Samonum/GameDevSamples/tree/main/8.%20Optimization) and/or your own game.
 
 The goal is to increase the performance of your game.
 
