--- a/0. Assignments/5. Optimization.md
+++ b/0. Assignments/5. Optimization.md
@@ -43,3 +43,25 @@ Notes:
 Make sure you test for the same time span before and after, this way your profiler results are comparable.
 
 The actual number of ships your game can support will depend on your hardware, but all improvements will be compared on my computer
+
+
+## Grading
+The below grading is for optimizations in Space Defence. Optimizations in your own code count towards the Improvements points, and extra points may be awarded based on performance gain and complexity.
+
+### Improvements (Max 5):
+- +1 for every reasonable improvement up to 5
+
+### Methodology (Max 1):
+- +0.5 for reasonable methodology
+- +1 for good methodology
+
+### Performance (Max 4)*:
+- 10x +1
+- 15x +1.5
+- 20x +2
+- 25x +2.5
+- 30x +3
+- 35x +3.5
+- 40x +4
+
+*Measured in the increase in ships the game can handle at 50+ FPS. Exact results will varry based on hardware, performannce on my laptop is leading.
