--- a/0. Assignments/5. Optimization.md
+++ b/0. Assignments/5. Optimization.md
@@ -46,7 +46,7 @@ The actual number of ships your game can support will depend on your hardware, b
 
 
 ## Grading
-The below grading is for optimizations in the [Optimization Space Defence](https://github.com/Samonum/GameDevSamples/tree/main/8.%20Optimization). Optimizations in your own code count towards the Improvements points, and extra points may be awarded based on performance gain and complexity.
+The below grading is for optimizations in the [Optimization Space Defence](https://github.com/Samonum/GameDevSamples/tree/main/8.%20Optimization). Optimizations in your group project's code count towards the Improvements points, and extra points may be awarded based on performance gain and complexity.
 
 ### Improvements (Max 5):
 - +1 for every reasonable improvement up to 5
