--- a/0. Assignments/5. Optimization.md
+++ b/0. Assignments/5. Optimization.md
@@ -1,67 +1,3 @@
 # Optimization
 
-Optimize the code in [8. Optimization](https://github.com/Samonum/GameDevSamples/tree/main/8.%20Optimization) and/or your own game.
-
-The goal is to increase the performance of your game.
-
-If you decide to optimize your own code, make a scene that lags your game, and try to add more units to it as performance improves.
-
-If you struggle to make any signifficant improvements in your game, try the sample code. Report any improvements you made to either.
-
-
-## How to optimize your game:
-
-Optimization is an iterative process. Optimization should always be done in release mode.
-
-Before you make any changes, run the profiler and note down what part of the simulation uses the most processor time.
-
-Optimize the part that takes the most processor power.
-
-Test again to make sure your changes actually improved thing.
-
-Continue until your game can support as many entities (ships) as possible.
-
-## Optimization report
-
-Make a report of your optimization efforts in the form of an excell sheet. On each line list at least:
-- The number of entities (ships)
-- FPS
-- The percentage of processor time used by the most impactful code 
-- What improvements you have made
-- The new FPS
-- The new percentage of processor time
-- Any side notes including:
-  - If you reverted the changes
-  - Any impact it might have on functionality
-  - If your change negatively impacts maintainability of your code
-
-
-Finally note down any performance improvements you already made beforehand to your game for bonus points.
-
-
-Notes:
-Make sure you test for the same time span before and after, this way your profiler results are comparable.
-
-The actual number of ships your game can support will depend on your hardware, but all improvements will be compared on my computer
-
-
-## Grading
-The below grading is for optimizations in the [Optimization Space Defence](https://github.com/Samonum/GameDevSamples/tree/main/8.%20Optimization). Optimizations in your group project's code count towards the Improvements points, and extra points may be awarded based on performance gain and complexity.
-
-### Improvements (Max 5):
-- +1 for every reasonable improvement up to 5
-
-### Methodology (Max 1):
-- +0.5 for reasonable methodology
-- +1 for good methodology
-
-### Performance (Max 4)*:
-- 10x +1
-- 15x +1.5
-- 20x +2
-- 25x +2.5
-- 30x +3
-- 35x +3.5
-- 40x +4
-
-*Measured in the increase in ships the game can handle at 50+ FPS. Exact results will varry based on hardware, performannce on my laptop is leading.
+This assignment will be added later.
