--- a/0. Assignments/4. Playtesting.md
+++ b/0. Assignments/4. Playtesting.md
@@ -1,6 +1,6 @@
 # Playtesting
 
-Every team member should test their game with at least 3 people, of which at least 1 outside the class. Afterwards combine your results in 1 report.
+Every team member should test their game with at least 3 people, of which at least 1 outside the class. So if you have a group of 5, you will need 15 playtesters. Afterwards combine your results in 1 report.
 
 Make sure to ask primarily closed questions, but also open questions. Closed questions allow you to make easy comparisons, while open questions can result in answers to questions you had not even thought of. Your questionnaire should contain about 8 to 10 questions.
 
