Added information about vectors

--- a/Workshops/1. Monogame Basics.md
+++ b/Workshops/1. Monogame Basics.md
@@ -1,4 +1,13 @@
 # Monogame Basics
-Below is a list of 
+Below are some useful resources that will tetach you the basics of Monogame game development.
 
-How to add sprites and other content using the [MGCB Editor](https://docs.monogame.net/articles/getting_to_know/howto/content_pipeline/HowTo_GameContent_Add.html?tabs=vscode)
+- How to [install Monogame](https://docs.monogame.net/articles/getting_started/index.html).
+- How to add sprites and other content using the [MGCB Editor](https://docs.monogame.net/articles/getting_to_know/howto/content_pipeline/HowTo_GameContent_Add.html?tabs=vscode).
+- How to use the [Monogame game loop works](https://docs.monogame.net/articles/getting_to_know/whatis/game_loop/index.html).
+  - Note: We **won't** be using Monogame's build in GameComponent and Service classes. Next week we will look into building our own, as it will give us more flexibility and give us insight in how they work.
+
+# Vector Math
+The following sources can help you learn to use Vectors.
+
+-  Practice with [Vectors](https://www.mathsisfun.com/algebra/vectors.html).
+-  The Monogame documentation of the [Vector2 struct](https://docs.monogame.net/api/Microsoft.Xna.Framework.Vector2.html).
