Update 1. Monogame Basics.md
Added Delta time

--- a/Workshops/1. Monogame Basics.md
+++ b/Workshops/1. Monogame Basics.md
@@ -10,4 +10,5 @@ Below are some useful resources that will tetach you the basics of Monogame game
 The following sources can help you learn to use Vectors.
 
 -  Practice with [Vectors](https://www.mathsisfun.com/algebra/vectors.html).
+-  How to properly use [Delta time](https://www.youtube.com/watch?v=yGhfUcPjXuE).
 -  The Monogame documentation of the [Vector2 struct](https://docs.monogame.net/api/Microsoft.Xna.Framework.Vector2.html).
