Update 2. Space Defence.md

--- a/Assignments/2. Space Defence.md
+++ b/Assignments/2. Space Defence.md
@@ -1,4 +1,4 @@
-# 2 Space Defence 1
+# 2 Space Defence 1: Collision
 Finish the Space defence game. This is the first part of a 2 part assignment that will need to be handed in once all parts are finished.
 
 **Use of AI is not allowed for this assignment.**
