Update 2. Space Defence.md

--- a/Assignments/2. Space Defence.md
+++ b/Assignments/2. Space Defence.md
@@ -37,4 +37,4 @@ In the `LinePieceCollider` class add:
 2. Logic to calculate the intersection between a line piece and a rectangle in the `Intersects(RectangleCollider other)` method. (Hint: start by implementing the standard line formula method) (2p)
 
 
-The grade for the assignment is equal to the total points
+You can get a total of 10 points for this part of the assignment
