Update 3. Space Defence 2.md

--- a/Assignments/3. Space Defence 2.md
+++ b/Assignments/3. Space Defence 2.md
@@ -42,4 +42,6 @@ Add something new to the game of your chosing. For example:
 
 Add a short description of what you added. You can get up to 2 points depending on complexity 
 
-The grade for the assignment is equal to the total points (max 11 including bonus)
+You can get a maximum of 11 points for this assignment.
+
+The final grade for Space defence is (your points for the first part + the second part) /2 with a maximum of 10
