Update 2. Space Defence.md

--- a/Assignments/2. Space Defence.md
+++ b/Assignments/2. Space Defence.md
@@ -5,7 +5,7 @@ Finish the Space defence game. This is the first part of a 2 part assignment tha
 
 The Space Defence game is a game in which the player controls a space ship. In the game the player can shoot bullets at aliens theat are invading earth to defeat them. The player can get a temporary upgrade by shooting down a crate. Hitting the crate will turn the ship's cannon into a laser. The player shoots by clicking where they want to aim at. (Aiming to be implemented)
 
-Use the Game found [here]([https://github.com/Samonum/GameDevSamples/tree/main/3.%20Space%20Defence](https://github.com/Samonum/GameDevSamples/tree/main/Samples/3.%20Space%20Defence)) as the base. You may add extra methods, but do not change the signature (method name, parameters or return type) of the methods given in the template. Wherever applicable make proper use of GameTime.
+Use the Game found [here](https://github.com/Samonum/GameDevSamples/tree/main/Samples/3.%20Space%20Defence) as the base. You may add extra methods, but do not change the signature (method name, parameters or return type) of the methods given in the template. Wherever applicable make proper use of GameTime.
 
 Finish the game by adding the following:
 
